--- a/scss/pages/_landing.scss
+++ b/scss/pages/_landing.scss
@@ -5,22 +5,17 @@
 	}
 	&_content {
 		&-time {
-			margin-top: -1rem;
-			margin-bottom: 1.5rem;
-			font-family: 'Courier New', Courier, monospace;
-			font-size: 1.7rem;
-			font-weight: 200;
+			text-transform: uppercase;
+			font-size: 1.2rem;
 		}
 	}
 }
 
 .demo {
 	background-color: $color-white;
-	margin-top: -5rem;
 	margin-left: 8rem;
 	margin-right: 8rem;
-	padding: 2rem;
-	position: relative;
+	padding: 4rem 2rem;
 
 	@media screen and (max-width: 1200px) {
 		margin-top: 1rem;
@@ -29,42 +24,48 @@
 	}
 	@media screen and (max-width: $desktop) {
 		margin-top: -5rem;
-		margin-left: 0;
-		margin-right: 0;
 	}
 
 	&_text {
 		&-icon {
 			width: 3rem;
 			height: 3rem;
+			@media screen and (max-width: $desktop) {
+				align-self: center;
+				width: 2.5rem;
+				height: 2.5rem;
+				margin-bottom: 1rem;
+			}
 		}
 		&-info {
 			margin-left: 2rem;
 		}
 	}
 	&_vid {
-		transform: translateX(5rem);
-		width: 20rem;
+		transform: translateX(3rem);
+		width: 25rem;
 		height: 15rem;
+
+		@media screen and (max-width: 1200px) {
+			width: 20rem;
+			height: 15rem;
+		}
 
 		@media screen and (max-width: $desktop) {
 			align-self: center;
-
+			transform: translateX(0);
 			width: 15rem;
 			height: 10rem;
-		}
-		@media screen and (max-width: 620px) {
-			transform: translateX(0);
 		}
 	}
 }
 
 .gallery {
-	padding: 0 1rem;
-	margin-top: -1rem;
+	padding: 2rem;
+	margin-top: -3rem;
 	&_item {
 		&-pic {
-			border-radius: 1.5rem;
+			border-radius: 1rem;
 			@media screen and (max-width: $desktop) {
 				margin-bottom: 1rem;
 			}
@@ -75,6 +76,7 @@
 
 .ventajas {
 	padding: 5rem;
+	margin-top: -1rem;
 	@media screen and (max-width: $desktop) {
 		padding: 1rem;
 	}
@@ -84,10 +86,40 @@
 		background-color: $color-white;
 
 		&-item {
+			margin-bottom: 2rem;
+			font-size: 25rem;
 		}
 	}
+
 	&_img {
-		margin-top: -5rem;
+		&-item {
+			width: 100%;
+			@media screen and (max-width: $desktop) {
+				margin-top: -5rem;
+			}
+		}
+	}
+}
+
+.techInfo {
+	background-color: $color-white;
+	margin-left: 4rem;
+	margin-right: 4rem;
+	@media screen and (max-width: $desktop) {
+		margin: 0 auto;
+	}
+	&_img {
+		@media screen and (max-width: $desktop) {
+			display: none;
+		}
+	}
+	&_content {
+		padding: 2rem;
+		text-align: center;
+		&-specs {
+			margin-top: 2rem;
+			text-align: left;
+		}
 	}
 }
 
